toolchain/internal/core/analysis/testdata/errors/consts/object_spread_alias_non_object.vdl
// @expect: E206

const base = 1
const alias = base

const cfg = {
  ...alias
  host "localhost"
}
